--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,10 @@
             <label>A cipő ára: <input type="text" name="ar" class="form-control"></label>
             <button type="submit" class="btn btn-primary">Új cipő felvétele</button>
         </form>
+        <div class="shoe-card-container">
+        </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="http://localhost:4444/script.js"></script>
 </body>
 
 </html>
